--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -4,6 +4,9 @@ ru:
       confirmed: "Ваша учётная запись успешно подтверждена."
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
+      resend_confirmation:
+        title: 'Повторная отправка подтверждения почты'
+        button: 'Отправить письмо'
     failure:
       already_authenticated: "Вы уже вошли в систему."
       inactive: "Ваша учётная запись ещё не активирована."
@@ -32,6 +35,9 @@ ru:
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут Вы получите письмо с инструкциями по восстановлению вашего пароля."
       updated: "Ваш пароль успешно изменён. Теперь вы вошли в систему."
       updated_not_active: "Пароль успешно изменён."
+      forgot_password:
+        title: 'Забыли свой пароль?'
+        button: 'Отправить инструкции по восстановлению пароля'
     registrations:
       destroyed: "До свидания! Ваша учётная запись успешно удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
@@ -51,6 +57,8 @@ ru:
     login:
       title: 'Вход в систему'
       email: 'Електронная почта'
+      first_name: 'Имя'
+      last_name: 'Фамилия'
       password: 'Пароль'
       remember: 'Запомнить меня'
       submit: 'Войти'
@@ -58,6 +66,7 @@ ru:
       title: 'Регистрация'
       password_confirmation: 'Повторите пароль'
       minimal_characters: 'Минимальное количество символов'
+      submit: 'Зарегестрировать'
     forgot:
       title: 'Забыли пароль?'
     unlocks:
