Refactoring. Add locale for devise mailer

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -20,12 +20,25 @@ ru:
     mailer:
       confirmation_instructions:
         subject: "Инструкции по подтверждению учётной записи."
+        greeting: 'Здравствуйте'
+        info: 'Вы можете подтвердить почту с помощью ссылки ниже:'
+        confirm: 'Подтвердить мою електронную почту'
       reset_password_instructions:
         subject: "Инструкции по восстановлению пароля."
+        greeting: 'Здравствуйте'
+        notice: 'Кто-то подал заявку на изменение пароля, если это были вы, воспользуйтесь ссылкой ниже.'
+        important: 'Если изменение не вы запросили, то проигнорируйте это пиьсмо.'
+        confirm: 'Сменить пароль'
       unlock_instructions:
         subject: "Инструкции по разблокировке учётной записи."
+        greeting: 'Здравствуйте'
+        info: 'Нажмите на ссылку ниже, чтобы разблокировать Ваш аккаунт.'
+        important: 'Ваш аккаунт был заблокирован из-за множественных попыток войти с неверными данными логина\пароля'
+        confirm: 'Разблокировать аккаунт'
       password_change:
         subject: "Пароль был изменён."
+        greeting: 'Здравствуйте'
+        info: 'Сообщаем, что Ваш пароль был успешно изменен.'
     omniauth_callbacks:
       failure: "Вы не можете войти в систему с учётной записью из %{kind}, так как \"%{reason}\"."
       success: "Вход в систему выполнен с учётной записью из %{kind}."
