--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -110,4 +110,7 @@ ru:
         train_number: 'Номер поезда'
       new:
         title: 'Покупка билетов'
+      messages:
+        created: ''
+        updated: ''
       
